	Units from tribal villages (goody huts) are named
	Random names can now be mixed with other naming codes or static text
- Reminders
	Saved for all players in multiplayer games [BULL]

Bug Fixes:

- Strategy Layer
	Fixed random crash on Windows Vista/7
- City Screen
	Happiness and unhappiness are shown for foreign cities
	Whip/Draft Anger is shown for teammates' cities
- Team Games
	WHEOOH works correctly and won't check if a rival will DoW on your teammates or theirs
	Worst Enemy no longer shown for humans' teammates
- Multiplayer OOS Errors
	Changed random "polling error" on F8:MEMBERS tab to use asynchronous RNG
	Changed random unit name generator to use asynchronous RNG
- Scoreboard
	You can always see how many cities your teammates have
- Unit Naming
	Phonetic and Greek naming codes now start at first element (alpha)
	Domain code (^dm^) uses translated description (Water) instead of XML key (DOMAIN_WATER)

MODDING

New Features:

- BUFFY
	Merged BUFFY code into BUG

Improvements:

- Translation
	Split CIV4GameText XML files for Options into individual files matching the Config folder
- BugEventManager
	Added addPopupHandlers() that takes the name and functions as parameters instead of a single tuple
- Configuration
	Added a warning when you specify a key for an <option> or <list> that is outside an <options> or <section> element.

Bug Fixes:

- BugPath
	Added safeDebugPath() and safeInfoPath() to safely log paths that might contain non-Latin characters


____________________________________________________________________________________________________
BUG 4.2 released November 15th, 2009

CHANGES

New Features:

- SevoPedia
	Technology page shows Civilizations that start with it

Improvements:

- Great Person Progress Bar
	Added hover text displaying full details
- Info Screen [F9]
	Made colors optional on WONDERS list
	Added hover help text to WONDERS tab buttons
- Option Shortcut Reminder
	Message turns itself off the first time you open the Options screen